<resources>
    <string name="app_name">Pool</string>
    <string name="splash_logo">splash logo</string>
    <string name="pool_splash">pool splash</string>

    <string name="google_api_key">AIzaSyAzhPn6x9irCekOUVCB0Poaxf9aZs8KVJ4</string>

    <string name="title1">Shop</string>
    <string name="title2">Quick</string>
    <string name="title3">Easy</string>

    <string name="description1">Order from multiple stores at once</string>
    <string name="description2">Fast and same day delivery at your doorstep</string>
    <string name="description3">Easy and safe payment methods</string>

    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="get_started">Get Started</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_one">intro one</string>
    <string name="bottom_one">bottom one</string>
    <string name="screen1_img">screen1 img</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo_login">Logo login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">REGISTER</string>
    <string name="register_btn">Register</string>
    <string name="login3">Login</string>
    <string name="have_an_account">Have an account?</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login2">Login</string>
    <string name="login1">LOGIN</string>
    <string name="don_t_have_an_account">Register</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="_722222222">7000000</string>
    <string name="proceed">Proceed</string>
    <string name="button">Button</string>
    <string name="logout">Logout</string>
    <string name="logo_register">Logo register</string>
    <string name="textview">TextView</string>
    <string name="settings">Settings</string>
    <string name="logout1">Logout</string>
    <string name="peter_dinklage">Peter Dinklage</string>
    <string name="peterd_got_com">peterd@got.com</string>
    <string name="more_options">More Options</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="settings1">Settings</string>
    <string name="info">Info</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="logout3">Logout</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="address">Address</string>
    <string name="big_square">Big Square</string>
    <string name="choose_shop">Choose Shop</string>
    <string name="choose_vendor">Choose Vendor</string>
    <string name="vendor_image">vendor image</string>
    <string name="junction_pool">Junction pool</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="item_title">Item Title</string>
    <string name="food_img">food img</string>
    <string name="paneer_burger">KFC Paneer Burger</string>
    <string name="_21_pieces_of_kfcs_secret_formular_chicken_with_an_option_to_have_it_zinger_or_normal">2 Chicken Fillets, 1 Cheese slice, 1 Hashbrown, Colonel dressing</string>
    <string name="_400kes">400KES</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="my_location">My Location</string>
    <string name="location">Current Location</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="extras">Extras</string>
    <string name="_300_kes">300 KES</string>
    <string name="chips">Chips</string>
    <string name="add_to_cart1">Add To Cart</string>
    <string name="cart_empty">Cart is empty</string>
    <string name="buy">Checkout</string>
    <string name="empty_cart">Clear Cart</string>
    <string name="kfc_streetwise_2">KFC Streetwise 2</string>
    <string name="spicy">Spicy Big Chips</string>
    <string name="remove">Remove</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="total_5000_kes">Total: 5000 Kes</string>
    <string name="deliver_to">Address</string>
    <string name="kasarani_police_station">Kasarani Police Station</string>
    <string name="payment_method">Payment Method</string>
    <string name="sorry_we_dont_deliver_to_your_location_yet">Sorry we don\'t deliver to your location yet</string>
    <string name="_4150_kes">4150 KES</string>
    <string name="grand_total">Grand Total</string>
    <string name="_150_kes">150 KES</string>
    <string name="delivery_cost">Delivery cost</string>
    <string name="_4000_kes">4000 KES</string>
    <string name="checkout">Checkout</string>
    <string name="change_address">Change address</string>
    <string name="vvvv">)rW:)a.+K9]62n3@</string>
    <string name="details">Details</string>
    <string name="shopping_cost">Shopping Cost</string>
    <string name="checkout_details">Checkout Details</string>
    <string name="change"><u>Change</u></string>
    <string name="text_name">Name</string>
    <string name="raymond_gitonga">Raymond Gitonga</string>
    <string name="profile_email">Email</string>
    <string name="profile_phone">Phone</string>
    <string name="_254729320243">254729320243</string>
    <string name="edit">Edit</string>
    <string name="change1">Change</string>
    <string name="help_line_0729320243">Help Line: 0729320243</string>
    <string name="call">Call</string>
    <string name="jjjj">774793941</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="phone">Phone number</string>
    <string name="_01_january_1990">1 January 1990</string>
    <string name="delivered">Delivered</string>
    <string name="inprogress">In Progress</string>
    <string name="delivery_fee_150">Delivery fee: 150</string>

</resources>
