<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/orders_navigation"
            android:title="@string/orders"></item>

        <item
            android:id="@+id/profile_navigation"
            android:title="@string/profile">

        </item>

        <item
            android:id="@+id/settings_navigation"
            android:title="@string/settings">

        </item>

        <item
            android:id="@+id/info_navigation"
            android:title="@string/info">

        </item>

    </group>

    <item android:title="@string/more_options">
        <menu>

            <item
                android:id="@+id/share_navigation"
                android:title="@string/share">

            </item>

            <item
                android:id="@+id/help_navigation"
                android:title="@string/help">

            </item>

            <item
                android:id="@+id/logout_navigation"
                android:title="@string/logout3">

            </item>
        </menu>

    </item>

</menu>