<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:orientation="horizontal"
    android:padding="4dp">

    <LinearLayout
        android:id="@+id/cartLl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvProduct"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/kfc_streetwise_2" />

        <TextView
            android:id="@+id/tvExtra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spicy"
            android:textColor="@android:color/holo_red_light"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_300_kes" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <TextView
            android:id="@+id/cartRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/remove"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>


</LinearLayout>