<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.appIntro.SecondFragment"
    android:orientation="vertical"
    android:background="@drawable/screen1"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/screen2_img"
        android:layout_width="212dp"
        android:layout_height="181dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/screen1_img"
        android:src="@drawable/bike"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/title_intro"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:text="@string/title2"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/desc1_intro"
        android:layout_width="344dp"
        android:layout_height="87dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/arbutus"
        android:gravity="center"
        android:text="@string/description2"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/intro_next2"
        android:layout_width="73dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/next"
        android:textColor="#000"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"/>



</LinearLayout>