<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F7FAF4"
    tools:context=".view.fragment.CartFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/cartLl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:background="#F1F8E9">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/total_5000_kes"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnBuy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_rounded"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/buy" />
            </LinearLayout>
            <TextView
                android:id="@+id/emptyCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/empty_cart"
                android:textColor="@android:color/black"
                android:layout_marginBottom="4dp"
                android:textSize="12sp"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/cartEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:gravity="center_horizontal"
                android:text="@string/cart_empty"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:visibility="gone" />
        </LinearLayout>
</LinearLayout>